--- a/ci.yml
+++ b/ci.yml
@@ -19,8 +19,19 @@ jobs:
       with:
         go-version: '1.21'
 
-    - name: 🛠️ Build
+    - name: 🛠️ Build Go App
       run: go build -v .
 
-    - name: ✅ Test
+    - name: ✅ Run Tests
       run: go test ./...
+
+    - name: 🐳 Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+
+    - name: 🔨 Build Docker Image (no push)
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: false
+        tags: go-docker-api:test
+
